k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: recce
  labels:
    app.kubernetes.io/name: recce
