k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recce
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "5m"
spec:
  ingressClassName: nginx
  rules:
    - host: recce.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: recce
                port:
                  name: http
